test/errors/array_types_error/zs/packed_array_unpackable_struct_error.zs
package packed_array_unpackable_struct_error;

struct UnpackableStruct
{
    uint32 field;
};

struct PackedArrayUnpackableStructError
{
    packed UnpackableStruct array[];
};
